--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,18 +15,26 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+      - name: Log in to Docker Hub Registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build Docker image
         run: |
           docker build -t ghcr.io/${{ github.repository }}/perf-bench:latest .
-
-      - name: Push Docker image
+      - name: Push Docker image to GitHub Container Registry
         run: |
           docker push ghcr.io/${{ github.repository }}/perf-bench:latest
+      - name: Tag Docker image for Docker Hub
+        run: |
+          docker tag ghcr.io/${{ github.repository }}/perf-bench:latest ${{ secrets.DOCKER_USERNAME }}/perf-bench:latest
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/perf-bench:latest
